# backend

./: .gitignore  README.md  pyproject.toml  startup.txt
.github/workflows/: master_qualityslop.yml  staging_qualityslop(staging).yml
src/qs/: cache.py  cli.py  client.py  enums.py  exceptions.py  prompting.py  settings.py
src/qs/contrib/litestar/: __init__.py  constants.py  dependencies.py  exception_handler.py  factory.py  openapi.py  plugins.py  settings.py
src/qs/contrib/litestar/domain/: system.py
src/qs/contrib/msgspec/: __init__.py
src/qs/contrib/openai/: __init__.py  embeddings.py  gpt.py  settings.py
src/qs/contrib/redis/: client.py  settings.py
src/qs/contrib/sqlalchemy/: __init__.py  engine.py  settings.py
src/qs/contrib/stripe/: settings.py
src/qs/game/: player.py  priceMultiplier.py  session.py  stocks.py
src/qs/nlp/: __init__.py  chatbot.py  embeddings.py  llm.py
src/qs/resources/: finland_cost_of_living.csv
src/qs/server/: __init__.py  __main__.py  asgi.py  constants.py  dependencies.py  exceptions.py  llm_client.py  routes.py  schemas.py  settings.py
