[project]
name = "qualityslop-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
    "litestar[brotli,jwt] (>=2.18.0,<3.0.0)",
    "openai (>=2.8.0,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "qrcode (>=8.2,<9.0)",
    "pillow (>=12.0.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
